# internal_force_calculator

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: cliff.toml  dependabot.yml
.github/workflows/: check.yml  release.yml
calculator_core/: Cargo.toml
calculator_core/src/: beam.rs  lib.rs  principal_moment.rs  stress_state.rs  types.rs
calculator_core/tests/: stress_state_tests.rs
calculator_ui/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
calculator_ui/src/: App.tsx  main.tsx
calculator_ui/src-tauri/: Cargo.toml  tauri.conf.json
calculator_ui/src-tauri/src/: lib.rs  main.rs
calculator_ui/src/components/: AppLayout.tsx  AppSidebar.tsx  BeamCalculator.tsx  NormalStressCalculator.tsx  NormalStressFormula.tsx  StressStateCalculator.tsx
calculator_ui/src/components/render/: BeamCanvas.tsx  BeamRenderer.tsx  MohrCircles.tsx  SupportRenderer.tsx
calculator_ui/src/components/render/beam/: BendingMomentDiagram.tsx  SupportRenderer.tsx
calculator_ui/src/components/render/diagram/: BendingMomentDiagram.tsx  ShearForceDiagram.tsx
calculator_ui/src/components/render/stress/: MohrCircles.tsx  StressCube3D.tsx
calculator_ui/src/components/settings/: CollapsibleSidebarMenu.tsx
calculator_ui/src/lib/: beam-calculations.ts  utils.ts
calculator_ui/src/services/: index.ts  interface.ts  tauri.ts  types.ts  types.wasm.d.ts  wasm.ts
calculator_ui/src/types/: beam.ts  stress-state.ts
calculator_wasm/: Cargo.toml
calculator_wasm/src/: lib.rs
(+9 files in other folders)
